--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.3",
+    "@shadcn/ui": "^0.0.4",
     "@stripe/stripe-js": "^5.6.0",
     "@uploadthing/react": "^7.2.0",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.7",
@@ -29,6 +31,7 @@
     "mongodb": "^6.13.0",
     "mongoose": "^8.9.5",
     "next": "^15.1.5",
+    "postcss": "^8.5.3",
     "query-string": "^9.1.1",
     "react": "^19.0.0",
     "react-datepicker": "^8.0.0",
@@ -37,12 +40,10 @@
     "stripe": "^17.6.0",
     "svix": "^1.45.1",
     "tailwind-merge": "^2.6.0",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.5.0",
-    "zod": "^3.24.1",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^3.4.17"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20",
